--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 
         <div class="row">
 
+            
             <div class="container col-md-8" id="blocoPersonagem">
-                <table class="table table-striped table-dark" id="tabelaChar"> 
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-dark" id="tabelaChar">
+                    </table>
+                </div>
             </div>
             
             <div class="container col-md-8" id="charText">
